close #571 use bootstrap and mixins on footer

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -1,40 +1,30 @@
-{% capture sectionid %}
-{%if include.id%}{{include.id}}{%else%}no-id-given{%endif%}
-{% endcapture %}
 
-{% capture email %}
-{%if include.email%}{{include.email}}{%else%}your@email.here{%endif%}
-{% endcapture %}
-
-{% capture phone %}
-{%if include.phone%}{{include.phone}}{%else%}+1 123 456 789{%endif%}
-{% endcapture %}
-
-{% capture title %}
-{%if include.title%}{{include.title}}{%else%}add "title=your title here" to the include{%endif%}
-{% endcapture %}
-
-{% capture caption %}
-{%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
-    {% endcapture %}
 
     <footer>
-      <hr>
-      <div class="left">
-        <h3>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance? Talk to us about your <a
-            class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or come
-          <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h3>
-        <span>
+      <div class="row">
+     <div class="col-md-7 col-12">
+        <h4>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance?<br> Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or
+          <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h4>
+        
+          <div class="row">
+            <div class="col-12 footer-nav">
+              
+            
           {% assign sorted_navi = site.pages | sort: 'order' %}
           {% for page in sorted_navi %}
           {% if page.navigation == true %}
-          <li><a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
+         
+         <a class="footer-nav-link" href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a>
+        
           {% endif %}
           {% endfor %}
-        </span>
-      </div>
+       
+        </div>
+        </div>
+        </div>
+        <div class="col-md-5 col-12 right">
 
-      <div class="right">
+     <div class="some">
         <a href="https://twitter.com/prolike_io" target="_blank" data-proofer-ignore><i class="fab fa-twitter"></i></a>
         <a href="#" target="_blank" data-proofer-ignore><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.instagram.com/prolike_io/" target="_blank" data-proofer-ignore><i
@@ -42,13 +32,16 @@
         <a href="https://github.com/prolike" target="_blank" data-proofer-ignore><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/company/prolike/" target="_blank" data-proofer-ignore><i
             class="fab fa-linkedin-in"></i></a>
+          </div>
         <span>
           <li><a href="https://goo.gl/maps/Esji6p1mx7x" target="_blank">Allerød Stationsvej 4, 3450 Allerød</a></li>
           <li><a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/"
-              target="_blank">VAT NUMBER: 39464104</a></li>
+              target="_blank">Vat number: 39464104</a></li>
           <li><a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a></li>
           <li><a href="tel:+45 20 872 530">20 87 25 30</a></li>
         </span>
         <p>© 2019 Prolike. All rights reserved.</p>
       </div>
+    </div>
+
     </footer>
