--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -3,6 +3,8 @@ html {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
+
+  
 }
 
 body {
@@ -17,13 +19,21 @@ body {
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@include for-ipad-pro {
   .front {
     padding: 0 5vh;
+  }
+
+  h4 {
+    font-size: 1.2em;
   }
 }
 
 
+
+.yellow-text {
+  color: $prolikeyellow;
+}
 
 
 
