--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "components/footer.scss";
 @import "components/signup.scss";
 @import "components/related.scss";
+@import "components/boxes.scss";
 
 // Pages: All of our styling for our individual pages
 
