--- a/_layouts/anything.html
+++ b/_layouts/anything.html
@@ -2,45 +2,49 @@
 layout: page
 ---
 
-<div class="posts-container">
+<div class="boxes anything">
 
-  <div class="anything-overview">
-    <h1>Latest posts</h1>
+    <h2>Latest posts</h2>
     <hr>
-  </div>
 
-  <div class="wrapper">
+
+  <div class="row">
     {% for post in site.posts%}
-    <div class="story-card">
-      <a href="{{ post.url }}"><div class="card-img-top" style="background-image: url('{{ post.image }}')"></div></a>
-      <div class="card-body">
-        <a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
-        <p class="card-text">{{ post.description }}</p>
-        <p class="author-text"><span class="date-span">By <a href="{{ post.author-github }}" target="_blank">{{ post.author }}</a></span></p>
-      </div>
+    <div class="col-xl-4 col-sm-6 col-sx-12">
+      <a href="{{ post.url }}">
+        <img src="{{ post.image }}">
+      </a>
+      
+        <a href="{{ post.url }}">
+          <h4>{{ post.title }}</h4>
+        </a>
+        
+        <p>{{ post.description }}</p>
+        <p>By <a class="faded-text" href="{{ post.author-github }}" target="_blank">{{ post.author }}</a></p>
+     
     </div>
     {% endfor %}
   </div>
 
-  <div class="anything-overview">
-    <h1>Infographics</h1>
+  
+    <h2>Infographics</h2>
     <hr>
-  </div>
+ 
 
-  <div class="wrapper">
-    {% for post in site.stories%}
-    <div class="story-card">
+  <div class="row">
+    {% for post in site.stories %}
+    <div class="col-xl-4 col-sm-6 col-sx-12">
       <a href="{{ post.url }}">
-        <div class="card-img-top" style="background-image: url('{{ post.image }}')"></div>
+        <img src="{{ post.image }}">
       </a>
-      <div class="card-body">
+      
         <a href="{{ post.url }}">
-          <h2>{{ post.title }}</h2>
+          <h4>{{ post.title }}</h4>
         </a>
         
-        <p class="card-text">{{ post.description }}</p>
-        <p class="author-text"><span class="date-span">By <a href="{{ post.author-github }}" target="_blank">{{ post.author }}</a></span></p>
-      </div>
+        <p>{{ post.description }}</p>
+        <p>By <a class="faded-text" href="{{ post.author-github }}" target="_blank">{{ post.author }}</a></p>
+     
     </div>
     {% endfor %}
   </div>
