--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -30,9 +30,30 @@ body {
 }
 
 
+.row {
+  margin: 0 -15px;
+}
+
+
+h1, h2, h3, h4 {
+  @include sans-serif-font;
+}
+
+
+hr {
+  width: 100%;
+  height: 1.5px;
+  background: rgba(107,125,153,0.15);
+  margin: 0 0 20px 0;
+ }
+
 
 .yellow-text {
   color: $prolikeyellow;
+}
+
+.faded-text {
+  opacity: 0.7;
 }
 
 
