--- a/_layouts/anything.html
+++ b/_layouts/anything.html
@@ -12,7 +12,9 @@ layout: page
     {% for post in site.posts%}
     <div class="col-xl-4 col-sm-6 col-sx-12">
       <a href="{{ post.url }}">
+        <div class="image-box">
         <img src="{{ post.image }}" alt="{{ post.title }}">
+        </div>
       </a>
       
         <a href="{{ post.url }}">
@@ -35,7 +37,9 @@ layout: page
     {% for post in site.stories %}
     <div class="col-xl-4 col-sm-6 col-sx-12">
       <a href="{{ post.url }}">
-        <img src="{{ post.image }}" alt="{{ post.title }}">
+        <div class="image-box">
+          <img src="{{ post.image }}" alt="{{ post.title }}">
+          </div>
       </a>
       
         <a href="{{ post.url }}">
