--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -2,9 +2,10 @@
 layout: page
 ---
 
-<div class="events-container">
-  <h3 class="status-heading">Upcoming events:</h3>
-  <div class="wrapper">
+<div class="boxes">
+ <h4>Upcoming events:</h4>
+ <hr>
+  <div class="row">
 
     {% assign sorted_events = site.events | sort: "date" | reverse %}
  
@@ -15,26 +16,30 @@ layout: page
         {% if postStartDate >= curDate %}
         {% if event.show-on-list %}
        
-        <a href="{{ event.url }}">
-          <div class="events-boks">
-    
-            <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
-            <h4 class="events-date">{{ event.date | date: "%d %B %Y" }}</h4>
-    
-            <h2 class="events-heading">
-              {{ event.title }}
-    
-            </h2>
-            <p>{{ event.description }}.</p>
-            <h4>Read more</h4>
+       
+          <div class="col-xl-4 col-sm-6 col-sx-12">
+            <a href="{{ event.url }}">
+              <div class="image-box">
+              <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
+            </div>
+            </a>
+              <h5 class="yellow-text">{{ event.date | date: "%d %B %Y" }}</h5>
+      
+              <h4 class="events-heading">
+                {{ event.title }}
+      
+              </h4>
+              <p>{{ event.description }}.</p>
+          
           </div>
-        </a>
+      
        {% endif %}
         {% endif %}
     {% endfor %}
       </div>
-      <h3 class="status-heading">Past events:</h3>
-      <div class="wrapper">
+      <h4>Past events:</h4>
+      <hr>
+      <div class="row">
 
     {% for event in sorted_events %}
         {% assign postStartDate = event.date | date: '%s' %}
@@ -42,20 +47,22 @@ layout: page
         {% if postStartDate >= curDate %}
         
         {% else %}
-        <a href="{{ event.url }}">
-          <div class="events-boks">
+        
+        <div class="col-xl-4 col-sm-6 col-sx-12">
+          <a href="{{ event.url }}">
+            <div class="image-box">
+              <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
+            </div></a>
+            <h5 class="yellow-text">{{ event.date | date: "%d %B %Y" }}</h5>
     
-            <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
-            <h4 class="events-date">{{ event.date | date: "%d %B %Y" }}</h4>
-    
-            <h2 class="events-heading">
+            <h4 class="events-heading">
               {{ event.title }}
     
-            </h2>
+            </h4>
             <p>{{ event.description }}.</p>
-            <h4>Read more</h4>
-          </div>
-        </a>
+        
+        </div>
+        
 
         {% endif %}
         {% endif %}
