--- a/_sass/components/_boxes.scss
+++ b/_sass/components/_boxes.scss
@@ -1,22 +1,33 @@
 .boxes {
     @include page-side-padding;
+    @include no-decoration;
+
+    a {
+        color: black;
+    }
     .row {
         margin-bottom: 50px;
-        div {
-            max-height: 350px;
+        @include for-phone-only {
+            margin-bottom: 25px;
         }
     }
     .row:last-of-type {
         margin-bottom: 0;
     }
 
-    img {
-        width: 100%;
-        height: 50%;
-        object-fit: cover;
+    .image-box {
+        height: 200px;
         margin-bottom: 10px;
-        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+        img {
+            width: 100%;
+            object-position: left;
+            height: 100%;
+            object-fit: cover;
+            margin-bottom: 10px;
+            box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+        }
     }
+   
 
 
 
