Get bootstrap scss files and compile it with our own sass

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -28,7 +28,7 @@ footer {
 
     @include for-ipad-pro {
         .footer-nav {
-            @include no-pad-no-mag;
+            margin:0;
             
             
         }
