--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -3,7 +3,7 @@
     <footer>
       <div class="row">
      <div class="col-md-7 col-12">
-        <h4>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance?<br> Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or
+        <h4>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance?<br> Talk to us about your <a class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas, or
           <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h4>
         
           <div class="row">
