--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@
 @import "components/signup.scss";
 @import "components/related.scss";
 @import "components/boxes.scss";
+@import "components/bootstrap.scss";
 
 // Pages: All of our styling for our individual pages
 
