--- a/_sass/abstracts/_mixins.scss
+++ b/_sass/abstracts/_mixins.scss
@@ -21,6 +21,13 @@
 }
 
 
+@mixin for-laptop() {
+  @media ( max-width: 1300px) {
+    @content;
+  }
+}
+
+
 //////////
 
 @mixin no-pad-no-mag() {
@@ -40,6 +47,8 @@
 }
 
 
+
+
 @mixin no-dots() {
   list-style-type: none;
 }
@@ -48,7 +57,7 @@
   text-align: right;
 }
 
-@mixin no-decoration() {
+@mixin yellow-hover() {
   a:hover {
     text-decoration: none;
     color: $prolikeyellow;
@@ -73,7 +82,6 @@
     color: white;
   }
 
-  @include no-decoration;
 }
 
 @mixin bg-image {
@@ -89,22 +97,22 @@
 // paddings
 
 @mixin page-side-padding() {
-  padding: 95px 20vh 50px;
+  padding-left: 20vh;
+  padding-right: 20vh;
 
 
-  @include for-ipad-pro {
-    padding: 95px 2vh 50px;
+  @include for-laptop {
+    padding-left: 2vh;
+    padding-right: 2vh;
   }
 }
 
-@mixin small-padding() {
-  padding: 20px 20vh;
-
-
-  @include for-ipad-pro {
-    padding: 20px 2vh;
-  }
+@mixin page-top-bottom-padding() {
+  padding-top: 95px;
+  padding-bottom: 50px;
 }
+
+
 
 
 
