--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,8 @@
 @import "components/related.scss";
 @import "components/boxes.scss";
 @import "components/bootstrap.scss";
+@import "components/article.scss";
+@import "components/iframe.scss";
 
 // Pages: All of our styling for our individual pages
 
