--- a/_layouts/anything-post.html
+++ b/_layouts/anything-post.html
@@ -9,17 +9,17 @@ layout: page
 {% endif %}
 
 
-<section class="post">
-  <div class="content">
+<div class="article">
+<div class="row">
+  <div class="col-12">
     <span>
       <p>{{ page.date | date: "%d. %B, %Y" }}</p>
-      <h1>{{page.title}}</h1>
+      <h1>{{page.title}}</h2>
       <p>By <a href="{{ page.author-github }}">{{ page.author }}</a></p>
     </span>
-    <div class="image-header-bg" style="background-image: url('{{ page.image }}') !important;"></div>
+    <div class="header-image"><img src="{{ page.image }}"></div>
     {{ page.content }}
   </div>
-</section>
-
-{% include components/related.html %}
+  </div>
+  </div>
 
