--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -44,6 +44,18 @@ body {
 }
 
 
+a {
+  color: $black;
+  opacity: .7;
+
+  &:hover {
+    opacity: 1;
+    color: $black;
+    text-decoration: none;
+  }
+
+}
+
 h1, h2, h3, h4, h5 {
   @include sans-serif-font;
 }
