--- a/_sass/components/_iframe.scss
+++ b/_sass/components/_iframe.scss
@@ -1,7 +1,5 @@
-.resp-iframe-container {
 
-
-    .resp-iframe {
+    iframe {
 
         height: 340px;
         width: 100%;
@@ -13,4 +11,3 @@
 
         }
     }
-}
