--- a/_layouts/anything-post.html
+++ b/_layouts/anything-post.html
@@ -17,7 +17,7 @@ layout: page
       <h1>{{page.title}}</h2>
       <p>By <a href="{{ page.author-github }}">{{ page.author }}</a></p>
     </span>
-    <div class="header-image"><img src="{{ page.image }}"></div>
+    <div class="header-image"><img src="{{ page.image }}" alt="{{ page.title }}"></div>
     {{ page.content }}
   </div>
   </div>
