--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,50 +1,17 @@
-.services {
-    padding: 15vh 20vh;
-    height: auto;
-    width: auto;
-    align-items: center;
-    
-    .row {
-        margin-right: 0px;
-        margin-left: 0px;
-    }
 
-    .service-heading {
-        margin-left: auto;
-        margin-right: auto;
-        font-weight: 600;
-
-    }
-
-    p {
-        padding-top: 10px;
-    }
-
-    .service-boxes {
-        padding: 50px;
-        align-items: center;
-
-        a {
-            text-decoration: none;
-        }
 
 
         .service-box {
-            color: white;
-            align-items: center;
-            text-align: center;
-            background-color: $prolikeblue;
-            padding: 15px;
-            margin-top: 30px;
+            @include dark-background;
+            padding: 20px 20px 0 20px;
             height: 200px;
-            width: 100%;
-            border-radius: 5px;
+            text-align: center;
 
-            .box {
-                margin-top: 15px;;
+            @include for-ipad-pro {
+                margin-bottom: 30px;
             }
 
-                .service-icon {
+                i {
                     font-size: 60px;
                     margin: 20px 0;
                     color: $prolikeyellow;
@@ -61,141 +28,3 @@
 
 
         }
-
-    }
-
-    .service-info {
-        padding-top: 5vh;
-        padding-bottom: 5vh;
-        margin-bottom: 5vh;
-        border-top: 1px solid rgba(0, 0, 0, 0.25);
-
-        h2 {
-            font-weight: bold;
-        }
-
-        a {
-            font-weight: 700;
-            color: #000000;
-
-            &:hover {
-                text-decoration: none;
-                color: $prolikeyellow;
-            }
-        }
-
-        .btn {
-            width: 100%;
-            color: white;
-
-            &:hover {
-                color: $prolikeblue;
-            }
-        }
-    }
-
-    #popup {
-        width: 100%;
-        height: 50vh;
-        margin: 0 auto;
-        margin-bottom: 5vh;
-        border: 1px solid rgba(0, 0, 0, 0.25);
-        box-shadow: 0px 0px 0px 0px black;
-      }
-      #popup iframe {
-        width: 100%;
-        height: 100%
-      }
-
-    .service-info:last-of-type {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-    }
-
-}
-
-@media only screen and (max-width: 1024px) {
-    .services {
-        padding: 10vh 0vh;
-    }
-    .service {
-        padding: 5vh 0vh;
-
-        .pop {
-            padding: 0;
-        }
-
-        #popup {
-            height: 80vh;
-          }
-
-        .service-boxes {
-
-            .service-box {
-                width: auto;
-                height: 250px;
-                margin: unset;
-                margin-top: 30px;
-            }
-        }
-    }
-}
-
-
-@media only screen and (max-width: 480px) {
-
-    .services {
-        padding: 20vh 0vh;
-
-    }
-    
-    .service {
-        padding: 5vh 0vh;
-        height: auto;
-        width: 100%;
-        text-align: center;
-
-        
-        .service-boxes {
-
-            .service-box {
-                width: auto;
-                height: 250px;
-                margin: unset;
-                margin-top: 30px;
-            }
-        }
-
-        .service-info {
-            text-align: left;
-        }
-    }
-}
-
-.service {
-    min-height: 50vh;
-    padding-top: 15vh;
-
-    .btn {
-        align-items: center;
-        text-align: center;
-    }
-    
-    h2 {
-        font-weight: bolder;
-    }
-
-
-    a {
-        font-weight: 700;
-        color: #000000;
-
-        &:hover {
-            text-decoration: none;
-            color: $prolikeyellow;
-        }
-    }
-}
-
-.service-form {
-    padding-bottom: 5vh;
-}
