--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -59,7 +59,7 @@ h1 {
 }
 
 .row {
-  margin: 0;
+  margin: 0 -14px;
 }
 
 .no-event {
@@ -99,6 +99,12 @@ hr {
   opacity: 0.7;
 }
 
+
+.kicker {
+  font-weight: 500;
+  color: #292929;
+  font-size: 1.1em;
+}
 
 
 blockquote {
