close #588 fix text on front page

--- a/_includes/components/primary.html
+++ b/_includes/components/primary.html
@@ -38,7 +38,7 @@
     <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-md-10 col-lg-8 col-xl-6 col-12">
             <h2 class="section-heading">{{title}}</h2>
             <p class="text-faded mb-4">{{caption}}</p>
             <a id="{{ btn_id_call | strip | strip_newlines }}" class="btn btn-light btn-xl js-scroll-trigger btn_i" href="{{btn_href || strip || strip_newlines}}"
