Front-page text on forestry

--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@
 @import "pages/list-detail.scss";
 @import "pages/partners.scss";
 @import "pages/partner.scss";
+@import "pages/front.scss";
 
 // Miscellaneous: All the stuff we can't define just yet
 
